# numerical-analysis

./: .gitignore  CHANGELOG.md  LICENSE_MIT  README.md  pyproject.toml
example/fem/: fem1d.py  fem2d.py
src/example/fem/: fem1d.py  fem2d.py  problem.py
src/numerical_analysis/discretization/: __init__.py  base.py  condition.py  mesh1d.py  mesh2d.py
src/numerical_analysis/fem/: __init__.py  base.py  fem1d.py  fem2d.py
src/numerical_analysis/util/: __init__.py  metrics.py  vis.py
tests/discretization/: test_mesh1d.py  test_mesh2d.py
tests/fem/: test_fem1d.py  test_fem2d.py
